discussion/kv_engine/170541/170541_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-11 08:44:41.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-11 09:13:33.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15513/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15513/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15513/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43820/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0033/0044]: test del_with_meta and drift stats...(119 ms) OK

421/421 Test #416: memcached_testapp.ep.TransportProtocols/AuditTest .............................................................................   Passed   14.61 sec

99% tests passed, 2 tests failed out of 421

Total Test time (real) = 555.55 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43820/ )

Timeout of a CTest test 420/421 Test #302: ep_testsuite_xdcr.value_eviction.comp_passive .................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43820/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18289/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14355/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36949/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16330/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5161/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17555/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25655/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5222/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17249/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
